The menu is no longer a child of the header-image.
This was needed because I wanted the page items to slightly overlap with the header image. This was possible by setting the z-index of the header image to -1. This however made it impossible to press the buttons on the menu, they would not respond. The solution was to make the menu's z-index higher. Since it was a child of the header image I could not figure out how to do this and thus I removed it from its parent the header image. Now the menu/top-bar has been placed at the absolute top of the page.

--- a/public/stylesheets/mateybyrdnet.css
+++ b/public/stylesheets/mateybyrdnet.css
@@ -9,6 +9,7 @@ body {
 
 .header-image {
   position: relative;
+  z-index: -1;
   background-position: center bottom;
   -webkit-background-size: cover;
   background-size: cover;
@@ -25,11 +26,18 @@ body {
   color: white;
 }
 
+.overtop-header {
+  margin-top: -3em;
+}
+
 .row main {
   background-color: rgb(240,240,240);
 }
 
 .top-bar {
+  position: absolute;
+  top: 0;
+  width: 100%;
   padding-left: 0;
   padding-right: 0;
 }
